--- a/index.html
+++ b/index.html
@@ -33,47 +33,47 @@
 			<div class="social">
 				<a href="http://www.instagram.com/jester_jeff"><img src="images/iconfinder_instagram-01-01_3066990.png"></a>
 			</div>
-			<a href="https://drive.google.com/open?id=1WHJTtLd3bXnpQb3PtoGpW-RtCMXWDEFM"><p class="resume"> RESUME </p></a>
+			<a href="https://drive.google.com/open?id=0B3Yz1nXXKIr0azhrTXFrMVJOSUU"><p class="resume"> RESUME </p></a>
 		</div>
 	</div>
 	<div id="border"></div>
-	<div class="container-projects">
+	<div class="container-projects container-fluid">
 		<div class="row">
 			<div class="col-sm-12">
 				<h3 class="work-title" id="work">Work</h3>
 			</div>
 		</div>
 			<div class="row">
-				<div class="col-sm-12 col-md-6 center-block box1">
+				<div class="col-sm-12 col-md-6 col-lg-6 center-block box1">
 					<a target="_blank" href="http://blindbarber.com"><img class= "image-of-projects" src="images/blindbarber.jpg" alt="">
 						<p>Blind Barber<br>Site Credit: SHRIMPTON.AGENCY</p>
 					</a>
 				</div>
-				<div class="col-sm-12 col-md-6 center-block box2">
+				<div class="col-sm-12 col-md-6 col-lg-6 center-block box2">
 					<a target="_blank" href="http://centro39.com"><img class= "image-of-projects" src="images/centro.jpg" alt="">
 						<p>Centro 39<br>Site Credit: SHRIMPTON.AGENCY</p>
 					</a>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-12 col-md-6 center-block box3">
+				<div class="col-sm-12 col-md-6 col-lg-6 center-block box3">
 					<a target="_blank" href="http://marinamoscone.com"><img class= "image-of-projects" src="images/marina.jpg" alt="">
 						<p>Marina Moscone<br>Site Credit: SHRIMPTON.AGENCY</p>
 					</a>
 				</div>
-				<div class="col-sm-12 col-md-6 center-block box4">
+				<div class="col-sm-12 col-md-6 col-lg-6 center-block box4">
 					<a target="_blank" href="http://jefftom.com/Royale/index.html"><img class= "image-of-projects" src="images/royale.jpg" alt="">
 						<p>Royale</p>
 					</a>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-12 col-md-6 center-block box5">
+				<div class="col-sm-12 col-md-6 col-lg-6 center-block box5">
 					<a target="_blank" href="http://judejowilson.com"><img class= "image-of-projects" src="images/JudeJowilson.jpg" alt="">
 						<p>Jude Jowilson</p>
 					</a>
 				</div>
-				<div class="col-sm-12 col-md-6 center-block box6">
+				<div class="col-sm-12 col-md-6 col-lg-6 center-block box6">
 					<a target="_blank" href="https://intense-basin-89586.herokuapp.com/users/sign_in"><img class= "image-of-projects" src="images/lazetravel.jpg" alt="">
 						<p>LazeTravel</p>
 					</a>
@@ -84,7 +84,7 @@
 		<div class="menu-titles">
 			<ul>
 				<li class="menu-link work-link"><a href="#work">WORK</a></li>
-				<li class="menu-link"><a href="https://drive.google.com/open?id=1WHJTtLd3bXnpQb3PtoGpW-RtCMXWDEFM">RESUME</a></li>
+				<li class="menu-link"><a href="https://drive.google.com/open?id=0B3Yz1nXXKIr0azhrTXFrMVJOSUU">RESUME</a></li>
 			</ul>
 		</div>
 	</div>
