fixed twitch link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<a href="http://www.twitter.com/iamfattytuna"><img src="images/iconfinder_twitter-01-01_3066980.png"></a>
 			</div>
 			<div class="social">
-				<a href="http://wwww.twitch.tv/iamfattytuna"><img src="images/iconfinder_twitch-01-01_3066972.png"></a>
+				<a href="http://www.twitch.tv/iamfattytuna"><img src="images/iconfinder_twitch-01-01_3066972.png"></a>
 			</div>
 			<div class="social">
 				<a href="http://www.instagram.com/jester_jeff"><img src="images/iconfinder_instagram-01-01_3066990.png"></a>
