fixed google drive link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="social">
 				<a href="http://www.instagram.com/jester_jeff"><img src="images/iconfinder_instagram-01-01_3066990.png"></a>
 			</div>
-			<a href="https://drive.google.com/open?id=1zMF2hS9shXL_JElraVwfOOcUTb3XWWcF"><p class="resume"> RESUME </p></a>
+			<a href="https://drive.google.com/file/d/1nxMDOuk-LqTuI9mvvgUYgu4-4-Av-BGh/view?usp=sharing"><p class="resume"> RESUME </p></a>
 		</div>
 	</div>
 	<div id="border"></div>
