fixed resume link

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<div class="menu-titles">
 			<ul>
 				<li class="menu-link work-link"><a href="#work">WORK</a></li>
-				<li class="menu-link"><a href="https://drive.google.com/open?id=1zMF2hS9shXL_JElraVwfOOcUTb3XWWcF">RESUME</a></li>
+				<li class="menu-link"><a href="https://drive.google.com/file/d/1nxMDOuk-LqTuI9mvvgUYgu4-4-Av-BGh/view?usp=sharing">RESUME</a></li>
 			</ul>
 		</div>
 	</div>
