--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<a href="http://www.linkedin.com/in/jeffreytom/"><img src="images/iconfinder_linkedin-01-01_3066989.png"></a>
 			</div>
 			<div class="social">
-				<a href="http://www.instagram.com/jester_jeff"><img src="images/iconfinder_instagram-01-01_3066990.png"></a>
+				<a href="https://github.com/jtom90"><img src="images/GitHub-Mark-32px.png"></a>
 			</div>
 			<a href="https://drive.google.com/file/d/1jFn3JX37b_SooxznUHAIfLIFA0IHYkws/view?usp=sharing"><p class="resume"> RESUME </p></a>
 		</div>
